# actix-web-rest-api-with-jwt

./: .env.sample  .gitattributes  .gitignore  Cargo.toml  Dockerfile  Dockerfile.github-action  Dockerfile.local  Dockerfile.prod  LICENSE  README.md  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.stg.yml  docker-compose.yml  dotenv.sample  log4rs.yaml
.github/workflows/: actions.yml  ci_action.yml  cicd-linux.yml  cross_platforms_action.yml  docker_action.yml  docker_actions.yml
docker/local/: Dockerfile
docker/prod/: Dockerfile
libs/windows/: sqlite3.def  sqlite3.exp  sqlite3.lib
migrations/00000000000000_diesel_initial_setup/: up.sql
migrations/2018-12-05-031038_create_people_table/: down.sql  up.sql
migrations/2018-12-06-070116_create_users_table/: up.sql
migrations/2019-02-20-054109_create_login_history_table/: down.sql  up.sql
migrations/2019-02-21-045853_add_login_session_field_to_users_table/: down.sql  up.sql
src/: config.rs  constants.rs  error.rs  main.rs  schema.rs  secret.key  secret.key.sample
src/api/: account_controller.rs  address_book_controller.rs  mod.rs  ping_controller.rs
src/config/: app.rs  db.rs  mod.rs
src/middleware/: auth_middleware.rs  authen_middleware.rs  mod.rs
src/models/: filters.rs  login_history.rs  mod.rs  pagination.rs  person.rs  response.rs  user.rs  user_token.rs
src/services/: account_service.rs  address_book_service.rs  mod.rs
src/utils/: token_utils.rs
