[package]
name = "actix-web-rest-api-with-jwt"
version = "0.1.0"
authors = ["Hai Phan <bahaimt@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "3.3.2"
actix-rt = "2.0.2"
actix-service = "1.0.6"
actix-cors = "0.5.4"
log = "0.4.14"
env_logger = "0.8.3"
diesel_migrations = "1.4.0"
serde = "1.0.123"
serde_derive = "1.0.123"
serde_json = "1.0.62"
dotenv = "0.15.0"
futures = "0.3.12"
failure = "0.1.8"
derive_more = "0.99.11"
jsonwebtoken = "7.2.0"
bcrypt = "0.9.0"

[dependencies.diesel]
version = "1.4.5"
features = ["postgres", "r2d2", "chrono"]

[dependencies.chrono]
version = "0.4.19"
features = ["serde"]

[dependencies.uuid]
version = "0.8.2"
features = ["v4"]

[dev-dependencies.diesel]
version = "1.4.5"
features = ["sqlite", "r2d2", "chrono"]
